--- a/public/css/registration.css
+++ b/public/css/registration.css
@@ -11,7 +11,7 @@
             display: flex;
             min-height: 100vh;
             overflow: hidden;
-            margin-top: 2%;
+            margin-top: 4%;
         }
 
         /* Left fixed image */
@@ -157,7 +157,7 @@
             color: #0644a6;
         }
 
-        .btn-primary {
+        .btn12-primary {
             background-color: #b92151;
             color: white;
             padding: 12px;
@@ -170,8 +170,9 @@
             transition: background-color 0.3s ease;
         }
 
-        .btn-primary:hover {
+        .btn12-primary:hover {
             background-color: #a01c46;
+            color: white;
         }
 
         #login p {
@@ -278,7 +279,7 @@
                 gap: 10px;
             }
 
-            .btn-primary {
+            .btn12-primary {
                 font-size: 15px;
             }
         }
