--- a/public/css/events.css
+++ b/public/css/events.css
@@ -124,7 +124,7 @@
             }
 
             .consultation-button {
-                width: 80%;
+                width: 80% !important;
             }
         }
 
