--- a/public/css/student2.css
+++ b/public/css/student2.css
@@ -131,8 +131,6 @@
             color: white;
         }
 
-        .study-pro {}
-
         .cont h2 {
             /* font-size: 18px; */
             color: white;
@@ -247,7 +245,7 @@
         }
 
         .cta-section {
-            background: url("/images/contact-us-Flutemate-1024x538.webp") no-repeat center center / cover;
+            background: url("/images/contact-us-Flutemate-1024x538.jpg") no-repeat center center / cover;
             padding: 80px 20px;
             display: flex;
             justify-content: center;
