--- a/public/css/youngleader.css
+++ b/public/css/youngleader.css
@@ -52,7 +52,7 @@ html {
     margin: 0 auto;
     align-items: center;
     justify-content: space-between;
-    gap: 40px;
+    gap: 160px;
 }
 
 .hero-left {
@@ -104,8 +104,10 @@ html {
 }
 
 .app-mockup {
-    width: 100%;
+    width: 350px;
     max-width: 600px;
+    border-radius: 6px;
+    height: 400px;
     z-index: 1;
     position: relative;
     animation: float 4s ease-in-out infinite;
