--- a/public/css/loginfrontend.css
+++ b/public/css/loginfrontend.css
@@ -15,6 +15,20 @@
                 padding: 40px;
                 box-sizing: border-box;
             }
+             /* Left fixed image */
+        .imag {
+            width: 500px;
+            flex-shrink: 0;
+            display: block;
+        }
+
+        .imag img {
+            position: sticky;
+            top: 0;
+            height: 100vh;
+            width: 100%;
+            object-fit: cover;
+        }
 
             .card1-login {
                 flex: 1;
@@ -155,7 +169,7 @@
                     /* margin-top: 20%; */
                 }
 
-                .illustration {
+                .imag {
                     display: none;
                 }
             }
@@ -167,7 +181,7 @@
                     margin-top: 20%;
                 }
 
-                .illustration {
+                .imag {
                     display: none;
                 }
             }
