--- a/public/css/youngleader.css
+++ b/public/css/youngleader.css
@@ -104,7 +104,7 @@ html {
 }
 
 .app-mockup {
-    width: 350px;
+    width: 500px;
     max-width: 600px;
     border-radius: 6px;
     height: 400px;
@@ -216,8 +216,10 @@ html {
 
 .swiper-slide {
     /* background: #edecec; */
-    background: linear-gradient(90deg, #0644a6, #2764c5);
-    color: #fff;
+    /* background: linear-gradient(90deg, #0644a6, #2764c5); */
+    /* background: linear-gradient(90deg, #7f8085, #bbbcbd); */
+    background: linear-gradient(135deg, #c5eefc, #ffffff);
+    color: black;
     padding: 24px;
     border-radius: 16px;
     box-shadow: 0 6px 16px rgba(0, 0, 0, 0.05);
