--- a/public/css/student2.css
+++ b/public/css/student2.css
@@ -281,7 +281,8 @@
 
    .cta-card h2 {
        color: black;
-       font-size: 2rem;
+       font-size: 2.5rem;
+       font-weight: 700;
        margin-bottom: 20px;
    }
 
