--- a/public/css/user.css
+++ b/public/css/user.css
@@ -208,14 +208,14 @@ html, body {
 /* Dropdown Styling */
 .dropdown {
     position: absolute;
-    top: 50px; /* Position dropdown below the icon */
+    top: 50px; 
     right: 0;
     background-color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
     border-radius: 8px;
     padding: 15px;
     width: 250px;
-    display: none; /* Initially hidden */
+    display: none; 
     z-index: 1000;
     text-align: left;
 }
@@ -708,7 +708,7 @@ footer a:hover {
 
 
  .btn-paid {
-    background-color: #52c41a;        /* Green background */
+    background-color: #0f8900;      /* Green background */
     color: #fff;                      /* White text */
     font-weight: 600;                 /* Bold text */
     font-size: 14px;
@@ -721,12 +721,11 @@ footer a:hover {
 }
 
 .btn-paid:hover {
-    background-color: #389e0d;        /* Darker green on hover */
     transform: translateY(-2px);      /* Slight lift */
 }
 
 .btn-unpaid {
-    background-color: #ff4d4f;        /* Red background */
+    background-color: #cf0c0f;        /* Red background */
     color: #fff;                      /* White text */
     font-weight: 600;                 /* Bold text */
     font-size: 14px;
@@ -739,7 +738,6 @@ footer a:hover {
 }
 
 .btn-unpaid:hover {
-    background-color: #d9363e;        /* Darker red on hover */
     transform: translateY(-2px);      /* Slight lift */
 }
 .school-fields{
