--- a/public/css/registration.css
+++ b/public/css/registration.css
@@ -71,6 +71,16 @@ html {
     font-size: 0.95rem;
 }
 
+#facebookk {
+    background-color: #3B5998;
+    color: #FFFFFF;
+}
+
+#google-logo {
+    background-color: #DB4437;
+    color: #FFFFFF;
+}
+
 #password-rules {
     max-height: 0;
     opacity: 0;
