--- a/public/css/loginfrontend.css
+++ b/public/css/loginfrontend.css
@@ -30,6 +30,24 @@ body {
     object-fit: cover;
 }
 
+#facebookk {
+    background-color: #3B5998;
+    color: #FFFFFF;
+    text-align: left;
+}
+
+#google-logo {
+    background-color: #DB4437;
+    color: #FFFFFF;
+    text-align: left;
+}
+
+#apple {
+    background-color: #111;
+    color: #FFFFFF;
+    text-align: left;
+}
+
 .card1-login {
     flex: 1;
     display: flex;
@@ -93,7 +111,7 @@ body {
     cursor: pointer;
     display: flex;
     align-items: center;
-    gap: 10px;
+    /* gap: 10px; */
     justify-content: center;
 }
 
